--- a/index.html
+++ b/index.html
@@ -100,8 +100,6 @@
               <span class="author-block">
                 <a>Yuandong Wang</a><sup style="color:#6fbf73;">1</span>
               <span class="author-block">
-                <a href="https://keg.cs.tsinghua.edu.cn/persons/ljz/">Juanzi Li</a><sup style="color:#6fbf73;">1</sup>,</span>
-              <span class="author-block">
                 <a target="_blank" href="https://keg.cs.tsinghua.edu.cn/yuxiao/">Yuxiao Dong</a><sup
                   style="color:#6fbf73;">1</sup>,
               </span>
@@ -312,7 +310,7 @@
       <p>If you find our work helpful, please kindly cite our paper:</p>
       <pre><code>@article{zhang2025peft,
         title={Parameter-Efficient Fine-Tuning for Foundation Models},
-        author={Zhang, Dan and Feng, Tao and Lilong, Xue and Wang, Yuandong and Li, Juanzi and Dong, Yuxiao and Tang, Jie},
+        author={Zhang, Dan and Feng, Tao and Lilong, Xue and Wang, Yuandong and Dong, Yuxiao and Tang, Jie},
         journal={arXiv preprint arXiv:},
         year={2025}
       }</code></pre>
