--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="description"
     content="Parameter-Efficient Fine-Tuning for Foundation Models">
-  <meta name="keywords" content="self-reflective instruction, scientific reasoning, scientific language model">
+  <meta name="keywords" content="Parameter-Efficient Fine-Tuning, Foundation Model, Large Language Model, Visual Foundation Model, Multi-Modal Foundation Model">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Parameter-Efficient Fine-Tuning for Foundation Models</title>
 
@@ -94,11 +94,11 @@
               <span class="author-block">
                 <a href="https://zhangdan0602.github.io/">Dan Zhang</a><sup style="color:#6fbf73;">1</sup><sup style="color:#ed4b82;">*</sup>,</span>
               <span class="author-block">
-                <a target="_blank" href="">Tao Feng</a><sup style="color:#6fbf73;">1</sup><sup style="color:#ed4b82;">*</sup>,</span>
+                <a target="_blank" href="https://openreview.net/profile?id=~Tao_Feng3">Tao Feng</a><sup style="color:#6fbf73;">1</sup><sup style="color:#ed4b82;">*</sup>,</span>
               <span class="author-block">
                 <a target="_blank" href="https://openreview.net/profile?id=~Lilong_Xue1">Lilong Xue</a><sup style="color:#6fbf73;">1</sup><sup style="color:#ed4b82;">*</sup>,</span>
               <span class="author-block">
-                <a>Yuandong Wang</a><sup style="color:#6fbf73;">1</span>
+                <a target="_blank" href="https://scholar.google.ca/citations?hl=en&user=1zf18-oAAAAJ">Yuandong Wang</a><sup style="color:#6fbf73;">1</span>
               <span class="author-block">
                 <a target="_blank" href="https://keg.cs.tsinghua.edu.cn/yuxiao/">Yuxiao Dong</a><sup
                   style="color:#6fbf73;">1</sup>,
@@ -119,7 +119,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2401.07950" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/pdf/2501.13787" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
@@ -127,7 +127,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2401.07950" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2501.13787" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -140,7 +140,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Paper List</span>
                   </a>
                 </span>
               </div>
@@ -215,11 +215,9 @@
           <div class="content has-text-justified">
               <img class="center-block org-banner" src="static/images/overview_methods.png">
             </a>
-            <p style="text-align: center;"><strong>Tab. 1: The overview of recent PEFT methods primarily comprises several elements: Approach, Venue, Modal of FMs, Category of PEFT, SC (Structure Change), Changed Position, IE (Inference Efficiency), Addition of Parameters, and the percentage of Trainable Parameters. Note that the "-" represents that the paper does not provide a clear result. </strong>
+            <p style="text-align: center;"><strong>Tab. 1: The overview of recent PEFT methods primarily comprises several elements: Approach, Venue, Modal of FMs, Category of PEFT, SC indicates that the structure of FMS has changed, Position denotes the fine-tuned parameter position, IE means inference efficiency, Addition of Parameters, and the percentage of Trainable Parameters. Note that the "-" represents that the paper does not provide a clear result.</strong>
             </p>
           </div>
-
-
         </div>
       </div>
     </div>
@@ -308,11 +306,14 @@
     <div class="container is-max-desktop content">
       <h2 class="title is-3 has-text-centered">Reference</h2>
       <p>If you find our work helpful, please kindly cite our paper:</p>
-      <pre><code>@article{zhang2025peft,
-        title={Parameter-Efficient Fine-Tuning for Foundation Models},
-        author={Zhang, Dan and Feng, Tao and Lilong, Xue and Wang, Yuandong and Dong, Yuxiao and Tang, Jie},
-        journal={arXiv preprint arXiv:},
-        year={2025}
+      <pre><code>@misc{zhang2025parameterefficientfinetuningfoundationmodels,
+        title={Parameter-Efficient Fine-Tuning for Foundation Models}, 
+        author={Dan Zhang and Tao Feng and Lilong Xue and Yuandong Wang and Yuxiao Dong and Jie Tang},
+        year={2025},
+        eprint={2501.13787},
+        archivePrefix={arXiv},
+        primaryClass={cs.CL},
+        url={https://arxiv.org/abs/2501.13787}, 
       }</code></pre>
     </div>
   </section>
