--- a/index.html
+++ b/index.html
@@ -98,11 +98,7 @@
               <span class="author-block">
                 <a target="_blank" href="https://openreview.net/profile?id=~Lilong_Xue1">Lilong Xue</a><sup style="color:#6fbf73;">1</sup><sup style="color:#ed4b82;">*</sup>,</span>
               <span class="author-block">
-                <a target="_blank" href="https://scholar.google.ca/citations?hl=en&user=1zf18-oAAAAJ">Yuandong Wang</a><sup style="color:#6fbf73;">1</span>
-              <span class="author-block">
-                <a target="_blank" href="https://keg.cs.tsinghua.edu.cn/yuxiao/">Yuxiao Dong</a><sup
-                  style="color:#6fbf73;">1</sup>,
-              </span>
+                <a target="_blank" href="https://scholar.google.ca/citations?hl=en&user=1zf18-oAAAAJ">Yuandong Wang</a><sup style="color:#6fbf73;">1</sup>,</span>
               <span class="author-block">
                 <a target="_blank" href="https://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a><sup
                   style="color:#6fbf73;">1</sup>
@@ -308,7 +304,7 @@
       <p>If you find our work helpful, please kindly cite our paper:</p>
       <pre><code>@misc{zhang2025parameterefficientfinetuningfoundationmodels,
         title={Parameter-Efficient Fine-Tuning for Foundation Models}, 
-        author={Dan Zhang and Tao Feng and Lilong Xue and Yuandong Wang and Yuxiao Dong and Jie Tang},
+        author={Dan Zhang and Tao Feng and Lilong Xue and Yuandong Wang and Jie Tang},
         year={2025},
         eprint={2501.13787},
         archivePrefix={arXiv},
